0.5 (unreleased)
================

  -
 
0.4 (2008-06-12)
================

  - Use dynamic script names to allow multiple cluster
    [gawel]

  - Ensure that the log dir is created when used without zope's recipes
    [gawel]


0.3 (2008-06-01)
================

 - Updated docs and tests
   [mustapha]
 
 - pep8 cosmetics
   [mustapha]

 - Make it possible to pass in arguments to the control script.
   [hannosch]

 - Put all specified options, like server url and username into the generated
   control script. This allows to run it as is.
   [hannosch]

0.2 (2008-04-23)
================

 - Make possible to pass arguments to the command so one can use ctl scripts
   with supervisor with arguments like 'fg' for zope instances or --no-detach 
   or something similar for other programs
   [mustapha]

 - updated tests
   [mustapha]

0.1 (2008-04-21)
================

 - Created recipe with ZopeSkel [Mustapha Benali].