@@ -1,7 +1,9 @@
 0.5 (unreleased)
 ================
 
-  -
+- Adding eventlistners option for use as event notification framework.  
+  Targetting use with supervisor's memmon event listener
+  [aburkhalter]
  
 0.4 (2008-06-12)
 ================
